[package]
name = "lexer"
version = "0.1.0"
authors = ["Gordon Stewart <gstewart@ohio.edu"]
license = "MIT"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[dependencies]
regex = "1"
